Touched up history-form, nav underlay z-index has been increase to prevent any clicks when menu is open

--- a/app/static/styles/global/global.scss
+++ b/app/static/styles/global/global.scss
@@ -64,6 +64,7 @@ a {
   width: 100%;
   height: 250%;
   background-color: #ffffff00;
+  z-index: 2;
 }
 
 // Home Button
