--- a/app/static/styles/history/history.scss
+++ b/app/static/styles/history/history.scss
@@ -97,6 +97,8 @@
         border: 1px solid $accentColor;
         border-left: none;
         border-right: none;
+        border-radius: none;
+        width: 90px
     }
     #choose-year-div {
         position: sticky;
